manifests/apps/mlflow/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mlflow
  namespace: infinity-horizons
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mlflow
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mlflow
    spec:
      containers:
        - name: mlflow
          image: mlflow
          command:
            - mlflow
          args:
            - server
            - --host=0.0.0.0
            - --port=5000
            - --backend-store-uri=sqlite:///data/mlflow.db
            - --default-artifact-root=/data/mlflow/artifacts
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data/mlflow
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mlflow-data
