manifests/apps/mlflow/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: infinity-horizons
spec:
  ports:
    - name: http
      port: 5000
      targetPort: http
  selector:
    app.kubernetes.io/name: mlflow
